Features Dashboard Header responsiveness UI commit

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
                 <li>
                     <a href="#">Dashboard</a>
                 </li>
-                <li>
+                <li class="mobile-hide">
                     <a href="#">
                         <i class="fas fa-plus"></i>
                     </a>
@@ -30,7 +30,7 @@
         </nav>
         <div class="user">
             <ul>
-                <li>Chigoziem</li>
+                <li class="mobile-hide">Chigoziem</li>
                 <li>
                     <div class="thumbnail"></div>
                 </li>
