Features Dashboard Content Listing UI commit

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <div class="auth">
         <div class="auth-container">
             <img class="auth-logo" src="./imgs/mydiary_logo.png" alt="mydiary logo">
-            <form action="./profile.html" class="auth-inner">
+            <form action="./dashboard.html" class="auth-inner">
                 <div class="auth-title">
                     <h4>Log In</h4>
                     <p>or
