--- a/dashboard.html
+++ b/dashboard.html
@@ -47,9 +47,90 @@
             </ul>
         </div>
     </header>
-    <main>
-        <div class="container-dashboard">
+    <main role="main">
+        <div class="container-one">
+            <div class="filter">
+                <p class="tiny-title">Filters</p>
+                <ul class="filter-list">
+                    <li>
+                        <a href="#">favorite</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="content">
+                <p class="tiny-title">6 of 40</p>
+                <div class="diary-entry">
+                    <div class="header">
+                        <h4 class="title">My love life</h4>
+                        <div class="edit">
+                            <i class="fas fa-pencil-alt"></i>
+                        </div>
+                    </div>
+                    <h5 class="category">
+                        <span class="color"></span> Life-style</h5>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem accusamus provident ad id culpa nobis
+                        dicta accusantium ipsa magnam facere reiciendis, quos voluptate eligendi numquam.</p>
+                    <div class="notice">
+                        <div class="fav">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <div class="timer">Last updated - 3mins ago</div>
+                        <div class="details-btn">
+                            <a href="./details.html">
+                                <button>view details</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="diary-entry">
+                    <div class="header">
+                        <h4 class="title">My love life</h4>
+                        <div class="edit">
+                            <i class="fas fa-pencil-alt"></i>
+                        </div>
+                    </div>
+                    <h5 class="category">
+                        <span class="color"></span> Life-style</h5>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem accusamus provident ad id culpa nobis
+                        dicta accusantium ipsa magnam facere reiciendis, quos voluptate eligendi numquam.</p>
+                    <div class="notice">
+                        <div class="fav">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <div class="timer">Last updated - 3mins ago</div>
+                        <div class="details-btn">
+                            <a href="./details.html">
+                                <button>view details</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="diary-entry">
+                    <div class="header">
+                        <h4 class="title">My love life</h4>
+                        <div class="edit">
+                            <i class="fas fa-pencil-alt"></i>
+                        </div>
+                    </div>
+                    <h5 class="category">
+                        <span class="color"></span> Life-style</h5>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem accusamus provident ad id culpa nobis
+                        dicta accusantium ipsa magnam facere reiciendis, quos voluptate eligendi numquam.</p>
+                    <div class="notice">
+                        <div class="fav">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <div class="timer">Last updated - 3mins ago</div>
+                        <div class="details-btn">
+                            <a href="./details.html">
+                                <button>view details</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <script src="./js/custom.js"></script>
