Features Dashboard Content Responsiveness UI commit

--- a/dashboard.html
+++ b/dashboard.html
@@ -44,11 +44,14 @@
                 <li>
                     <a href="./login.html">Log out</a>
                 </li>
+<li class="mobile-show">
+                    <a href="./create.html">Add New Entry</a>
+                </li>
             </ul>
         </div>
     </header>
     <main role="main">
-        <div class="container-one">
+        <div class="container col-2">
             <div class="filter">
                 <p class="tiny-title">Filters</p>
                 <ul class="filter-list">
@@ -132,6 +135,11 @@
                 </div>
             </div>
         </div>
+        <a href="#">
+            <div class="float-btn mobile-show">
+                <i class="fas fa-plus"></i>
+            </div>
+        </a>
     </main>
     <script src="./js/custom.js"></script>
 </body>
