Features-profile: Profile Statistics and reminder settings switch UI commit

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,9 @@
             <ul>
                 <li class="mobile-hide">Chigoziem</li>
                 <li>
-                    <div class="thumbnail"></div>
+                    <div class="thumbnail">
+                        <img src="./imgs/userface.png" alt="User thumbnail">
+                    </div>
                 </li>
             </ul>
         </div>
@@ -44,7 +46,7 @@
                 <li>
                     <a href="./login.html">Log out</a>
                 </li>
-<li class="mobile-show">
+                <li class="mobile-show">
                     <a href="./create.html">Add New Entry</a>
                 </li>
             </ul>
