--- a/profile.html
+++ b/profile.html
@@ -104,7 +104,7 @@
             </div>
             <div class="wrapper">
                 <h3>Reminder Settings</h3>
-                <div class="notification">
+                <div class="inner-notsat">
                     <p>
                         <b>Notification</b>
                     </p>
@@ -113,6 +113,19 @@
                             <input type="checkbox" id="onOff">
                             <label for="onOff"></label>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="wrapper">
+                <h3>Statistics</h3>
+                <div class="inner-notsat">
+                    <p>
+                        <b>Total diary entry since you joined</b>
+                    </p>
+                    <div class="statistics-figure-wrap">
+                        <p class="statistics-figure">
+                            <b>40</b>
+                        </p>
                     </div>
                 </div>
             </div>
