Users can view the content of an entry: Completed.
Features-details page: Completed
[finishes #158968977]

--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,8 @@
                 <p class="tiny-title">Filters</p>
                 <ul class="filter-list">
                     <li>
-                        <a href="#">favorite</a>
+                        <a href="#">
+                            <i class="fas fa-heart"></i> favorite</a>
                     </li>
                 </ul>
             </div>
