--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Diari || Your personal true story</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>myDiary || Your personal true story</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/stylesheet.css">
