--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
                     <a href="#">Dashboard</a>
                 </li>
                 <li class="mobile-hide">
-                    <a href="#">
+                    <a href="./create.html">
                         <i class="fas fa-plus"></i>
                     </a>
                 </li>
@@ -71,7 +71,9 @@
                     <div class="header">
                         <h4 class="title">My love life</h4>
                         <div class="edit">
-                            <i class="fas fa-pencil-alt"></i>
+                            <a href="./create.html">
+                                <i class="fas fa-pencil-alt"></i>
+                            </a>
                         </div>
                     </div>
                     <h5 class="category">
