--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
                     <a href="dashboard.html">Dashboard</a>
                 </li>
                 <li class="mobile-hide">
-                    <a href="#">
+                    <a href="./create.html">
                         <i class="fas fa-plus"></i>
                     </a>
                 </li>
