User can add new entry: Completed.
Features-create page: Completed.
[finishes #158984497]

--- a/dashboard.html
+++ b/dashboard.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </div>
-        <a href="#">
+        <a href="./create.html">
             <div class="float-btn mobile-show">
                 <i class="fas fa-plus"></i>
             </div>
