Features-landing-page: Landing page UI commit

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
         <nav class="main-nav">
             <ul>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="./dashboard.html">Dashboard</a>
                 </li>
                 <li class="mobile-hide">
                     <a href="./create.html">
