--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
 <body>
     <div class="auth">
         <div class="auth-container">
-            <img class="auth-logo" src="./imgs/mydiary_logo.png" alt="mydiary logo">
+            <img class="auth-logo" src="./imgs/mydiary_logo_white.png" alt="mydiary logo">
             <form action="./profile.html" class="auth-inner">
                 <div class="auth-title">
                     <h4>Sign Up</h4>
@@ -21,28 +21,23 @@
                 </div>
                 <div class="form-group-wrap">
                     <div class="form-group">
-                        <input class="form-control" type="text" id="fname">
-                        <label class="a-left" for="fname">FIRST NAME</label>
+                        <input class="form-control" type="text" id="fname" placeholder="First Name">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="lname">
-                        <label class="a-left" for="lname">LAST NAME</label>
+                        <input class="form-control" type="text" id="lname" placeholder="Last Name">
                     </div>
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group">
-                    <input class="form-control a-center" type="text" id="email">
-                    <label class="a-center" for="email">EMAIL</label>
+                    <input class="form-control a-center" type="text" id="email" placeholder="Email">
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group-wrap">
                     <div class="form-group">
-                        <input class="form-control" type="password" id="password">
-                        <label class="a-left" for="password">PASSWORD</label>
+                        <input class="form-control" type="password" id="password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" id="confirmpassword">
-                        <label class="a-left" for="confirmpassword">CONFIRM PASSWORD</label>
+                        <input class="form-control" type="password" id="confirmpassword" placeholder="Password Confirm">
                     </div>
                 </div>
                 <button>Create account</button>
