--- a/create.html
+++ b/create.html
@@ -64,8 +64,7 @@
                     <div class="form-group-wrap">
                         <div class="form-group">
                             <div class="title-box">
-                                <input class="form-control" type="text" id="title">
-                                <label for="title">Enter title</label>
+                                <input class="form-control" type="text" id="title" placeholder="Enter title">
                             </div>
                         </div>
                         <div class="form-group">
