--- a/editprofile.html
+++ b/editprofile.html
@@ -32,81 +32,76 @@
         </nav>
         <div class="user ">
             <ul>
-                <li class="mobile-hide ">Chigoziem</li>
+                <li class="mobile-hide">Chigoziem</li>
                 <li>
-                    <div class="thumbnail ">
-                        <img src="./imgs/userface.png " alt="User thumbnail ">
+                    <div class="thumbnail">
+                        <img src="./imgs/userface.png " alt="User thumbnail">
                     </div>
                 </li>
             </ul>
         </div>
-        <div class="user-dropdown ">
+        <div class="user-dropdown">
             <ul>
                 <li>
                     <a href="./profile.html ">Profile</a>
                 </li>
-                <li class="mobile-show ">
+                <li class="mobile-show">
                     <a href="./create.html ">Add New Entry</a>
                 </li>
                 <li>
-                    <a href="./login.html ">Log out</a>
+                    <a href="./login.html">Log out</a>
                 </li>
             </ul>
         </div>
     </header>
-    <main role="main ">
-        <div class="container col-1 ">
+    <main role="main">
+        <div class="container col-1">
             <div>
-                <h1 class="big-title ">Edit profile</h1>
+                <h1 class="big-title">Edit profile</h1>
             </div>
-            <div class="wrapper editprofile ">
-                <form class="form-wrapper ">
-                    <div class="form-group-wrap ">
-                        <div class="form-group ">
-                            <input class="form-control " type="text " id="f-name ">
-                            <label for="f-name ">First Name</label>
+            <div class="wrapper editprofile">
+                <form class="form-wrapper">
+                    <div class="form-group-wrap">
+                        <div class="form-group">
+                            <input class="form-control" type="text" id="f-name" placeholder="First Name">
                         </div>
-                        <div class="form-group ">
-                            <input class="form-control " type="text " id="l-name ">
-                            <label for="l-name ">Last Name</label>
+                        <div class="form-group">
+                            <input class="form-control" type="text" id="l-name" placeholder="Last Name">
                         </div>
                     </div>
-                    <div class="small-spacing "></div>
-                    <div class="modified-grid ">
-                        <div class="form-group ">
-                            <input class="form-control " type="text " id="email ">
-                            <label for="email ">Email</label>
+                    <div class="small-spacing"></div>
+                    <div class="modified-grid">
+                        <div class="form-group">
+                            <input class="form-control" type="text" id="email" placeholder="First Name">
                         </div>
-                        <div class="form-group ">
-                            <input class="form-control " type="date " id="date ">
-                            <label for="date ">Date of birth</label>
-                        </div>
-                    </div>
-                    <div class="small-spacing "></div>
-                    <div class="form-group-wrap ">
-                        <div class="form-group ">
-                            <input class="form-control " type="tel " id="tel ">
-                            <label for="tel ">Phone Number</label>
-                        </div>
-                        <div class="form-group ">
-                            <input class="form-control " type="text " id="city ">
-                            <label for="city ">City</label>
+                        <div class="form-group">
+                            <input class="form-control" type="date" id="date" placeholder="Date">
+                            <label for="date">Date of birth</label>
                         </div>
                     </div>
-                    <div class="small-spacing "></div>
-                    <div class="form-group about-cont ">
-                        <textarea class="form-control " name=" " id=" " placeholder="Description "></textarea>
+                    <div class="small-spacing"></div>
+                    <div class="form-group-wrap">
+                        <div class="form-group">
+                            <input class="form-control" type="tel" id="tel" placeholder="Phone Number">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" id="city" placeholder="City">
+                        </div>
+                    </div>
+                    <div class="small-spacing"></div>
+                    <div class="form-group about-cont">
+                        <textarea class="form-control" placeholder="Description"></textarea>
                     </div>
                 </form>
             </div>
-            <div class="a-right r-btn ">
-                <a href="./editprofile.html ">
-                    <button class="cta-btn ">Save</button>
+            <div class="a-right r-btn">
+                <a href="./profile.html">
+                    <button class="cta-btn">Save</button>
                 </a>
             </div>
         </div>
     </main>
-    <script src="./js/custom.js "></script>
+    <script src="./js/custom.js"></script>
 </body>
 
 </html>
