--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="auth">
         <div class="auth-container">
-            <img class="auth-logo" src="./imgs/mydiary_logo.png" alt="mydiary logo">
+            <img class="auth-logo" src="./imgs/mydiary_logo_white.png" alt="mydiary logo">
             <form action="./dashboard.html" class="auth-inner">
                 <div class="auth-title">
                     <h4>Log In</h4>
@@ -20,15 +20,15 @@
                         <a href="./signup.html">sign up for a account.</a>.</p>
                 </div>
                 <div class="form-group">
-                    <input class="form-control a-center" type="text" id="email">
-                    <label class="a-center" for="email">EMAIL</label>
+                    <input class="form-control a-center" type="text" id="email" placeholder="Email">
+                    <!-- <label class="a-center" for="email">EMAIL</label> -->
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group">
-                    <input class="form-control a-center" type="password" id="password">
-                    <label class="a-center" for="password">PASSWORD</label>
+                    <input class="form-control a-center" type="password" id="password" placeholder="Password">
+                    <!-- <label class="a-center" for="password">PASSWORD</label> -->
                 </div>
-                <button>Log in</button>
+                <button>Log me in</button>
             </form>
         </div>
     </div>
