Features-landing-page: Landing page Modified UI commit

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </header>
         <main>
             <div class="container">
-                <p>Ease-to-use online</p>
+                <p>Easy-to-use online</p>
                 <h1>Diary app for everyone.</h1>
-                <p class="hype">We make your memories accessible from anywhere you deem feet, secured and private.</p>
+                <p class="hype">We make your memories accessible from anywhere you deem fit, secured and private.</p>
                 <div>
                     <a href="./signup.html">
                         <button class="cta-btn">Get started</button>
