--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                 <div class="auth-title">
                     <h4>Log In</h4>
                     <p>or
-                        <a href="./signup.html">sign up for a account.</a>.</p>
+                        <a href="./signup.html">sign up for a new account.</a>.</p>
                 </div>
                 <div class="form-group">
                     <input class="form-control a-center" type="text" id="email" placeholder="Email">
