Features-modal page UI commit

--- a/create.html
+++ b/create.html
@@ -91,6 +91,41 @@
             </div>
         </div>
     </main>
+    <div class="modal-olay">
+        <div class="modal-wraP">
+            <form action="./create.html">
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Enter category title">
+                    <div class="color-opt" name="color">
+                        <p>Select color</p>
+                        <span>
+                            <input class="color-control" id="one" type="radio" name="color">
+                            <label class="one" for="one"></label>
+                        </span>
+                        <span>
+                            <input class="color-control" id="two" type="radio" name="color">
+                            <label class="two" for="two"></label>
+                        </span>
+                        <span>
+                            <input class="color-control" id="three" type="radio" name="color">
+                            <label class="three" for="three"></label>
+                        </span>
+                        <span>
+                            <input class="color-control" id="four" type="radio" name="color">
+                            <label class="four" for="four"></label>
+                        </span>
+                        <span>
+                            <input class="color-control" id="five" type="radio" name="color">
+                            <label class="five" for="five"></label>
+                        </span>
+                    </div>
+                </div>
+                <div class="modal-btn-wrap">
+                    <button class="cta-btn">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
     <script src="./js/custom.js"></script>
 </body>
 
