--- a/create.html
+++ b/create.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>myDiary || Your personal true story</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/stylesheet.css">
@@ -74,7 +75,7 @@
                                 <option value="my love life">My love life</option>
                             </select>
                             <div class="new-category">
-                                <a href="#">Add new category</a>
+                                <a class="modal-open" href="#">Add new category</a>
                             </div>
                         </div>
                     </div>
@@ -125,6 +126,7 @@
                 </div>
             </form>
         </div>
+        <i class="modal-close fas fa-times"></i>
     </div>
     <script src="./js/custom.js"></script>
 </body>
