UI modification commit

--- a/details.html
+++ b/details.html
@@ -71,6 +71,8 @@
                     </div>
                     <h5 class="category">
                         <span class="color"></span> Life-style</h5>
+                    <h6>
+                        <i class="fas fa-clock"></i> May 12, 2006</h6>
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem accusamus provident ad id culpa nobis
                         dicta accusantium ipsa magnam facere reiciendis, quos voluptate eligendi numquam.Lorem ipsum dolor
                         sit amet consectetur adipisicing elit. Quidem accusamus provident ad id culpa nobis dicta accusantium
