--- a/signup.html
+++ b/signup.html
@@ -20,6 +20,10 @@
                     <p>or
                         <a href="./login.html">sign in to your account.</a>.</p>
                 </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" id="email" placeholder="Email">
+                </div>
+                <div class="small-spacing"></div>
                 <div class="form-group-wrap">
                     <div class="form-group">
                         <input class="form-control" type="text" id="fname" placeholder="First Name">
@@ -27,10 +31,6 @@
                     <div class="form-group">
                         <input class="form-control" type="text" id="lname" placeholder="Last Name">
                     </div>
-                </div>
-                <div class="small-spacing"></div>
-                <div class="form-group">
-                    <input class="form-control a-center" type="text" id="email" placeholder="Email">
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group-wrap">
