--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,9 @@
 <body>
     <div class="auth">
         <div class="auth-container">
-            <img class="auth-logo" src="./imgs/mydiary_logo_white.png" alt="mydiary logo">
+            <a href="./index.html">
+                <img class="auth-logo" src="./imgs/mydiary_logo_white.png" alt="mydiary logo">
+            </a>
             <form action="./profile.html" class="auth-inner">
                 <div class="auth-title">
                     <h4>Sign Up</h4>
