--- a/editprofile.html
+++ b/editprofile.html
@@ -31,26 +31,24 @@
                 </li>
             </ul>
         </nav>
-        <div class="user ">
+        <div class="user">
             <ul>
                 <li class="mobile-hide">Chigoziem</li>
                 <li>
                     <div class="thumbnail">
-                        <img src="./imgs/userface.png " alt="User thumbnail">
+                        <img src="./imgs/userface.png" alt="User thumbnail">
+                        <ul class="user-dropdown">
+                            <li>
+                                <a href="./profile.html">Profile</a>
+                            </li>
+                            <li class="mobile-show">
+                                <a href="./create.html">Add New Entry</a>
+                            </li>
+                            <li>
+                                <a href="./login.html">Log Out</a>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="user-dropdown">
-            <ul>
-                <li>
-                    <a href="./profile.html ">Profile</a>
-                </li>
-                <li class="mobile-show">
-                    <a href="./create.html ">Add New Entry</a>
-                </li>
-                <li>
-                    <a href="./login.html">Log out</a>
                 </li>
             </ul>
         </div>
