functioning-signup commit

--- a/CLIENT/dashboard.html
+++ b/CLIENT/dashboard.html
@@ -9,14 +9,14 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="../UI/css/stylesheet.css">
 </head>
 
 <body>
     <header class="header">
         <div class="brand">
             <a href="index.html">
-                <img class="brand-logo" src="./imgs/mydiary_logo_white.png" alt="diari_logo">
+                <img class="brand-logo" src="../UI/imgs/mydiary_logo_white.png" alt="diari_logo">
             </a>
         </div>
         <nav class="main-nav">
@@ -36,7 +36,7 @@
                 <li class="mobile-hide">Chigoziem</li>
                 <li>
                     <div class="thumbnail">
-                        <img src="./imgs/userface.png" alt="User thumbnail">
+                        <img src="../UI/imgs/userface.png" alt="User thumbnail">
                         <ul class="user-dropdown">
                             <li>
                                 <a href="./profile.html">Profile</a>
