--- a/CLIENT/login.html
+++ b/CLIENT/login.html
@@ -7,16 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>myDiary || Your personal true story</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="../UI/css/stylesheet.css">
 </head>
 
 <body>
     <div class="auth">
         <div class="auth-container">
             <a href="./index.html">
-                <img class="auth-logo" src="./imgs/mydiary_logo_white.png" alt="mydiary logo">
+                <img class="auth-logo" src="../UI/imgs/mydiary_logo_white.png" alt="mydiary logo">
             </a>
-            <form action="./dashboard.html" class="auth-inner">
+            <form class="auth-inner">
                 <div class="auth-title">
                     <h4>Log In</h4>
                     <p>or
@@ -24,17 +24,18 @@
                 </div>
                 <div class="form-group">
                     <input class="form-control a-center" type="text" id="email" placeholder="Email">
-                    <!-- <label class="a-center" for="email">EMAIL</label> -->
+                    <label for="email"></label>
                 </div>
                 <div class="small-spacing"></div>
                 <div class="form-group">
                     <input class="form-control a-center" type="password" id="password" placeholder="Password">
-                    <!-- <label class="a-center" for="password">PASSWORD</label> -->
+                    <label for="password"></label>
                 </div>
                 <button>Log me in</button>
             </form>
         </div>
     </div>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
