--- a/CLIENT/signup.html
+++ b/CLIENT/signup.html
@@ -7,21 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>myDiary || Your personal true story</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="../UI/css/stylesheet.css">
 </head>
 
 <body>
     <div class="auth">
         <div class="auth-container">
             <a href="./index.html">
-                <img class="auth-logo" src="./imgs/mydiary_logo_white.png" alt="mydiary logo">
+                <img class="auth-logo" src="../UI/imgs/mydiary_logo_white.png" alt="mydiary logo">
             </a>
-            <form action="./profile.html" class="auth-inner">
+            <form class="auth-inner">
                 <div class="auth-title">
                     <h4>Sign Up</h4>
                     <p>or
                         <a href="./login.html">sign in to your account.</a>.</p>
                 </div>
+                <div class="err-message"></div>
                 <div class="form-group">
                     <input class="form-control" type="text" id="email" placeholder="Email">
                     <label for="email"></label>
@@ -44,14 +45,15 @@
                         <label for="password"></label>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" id="confirmpassword" placeholder="Password Confirm">
-                        <label for="confirmpassword"></label>
+                        <input class="form-control" type="password" id="confirm-password" placeholder="Password Confirm">
+                        <label for="confirm-password"></label>
                     </div>
                 </div>
-                <button>Create account</button>
+                <button type="submit">Create account</button>
             </form>
         </div>
     </div>
+    <script src="./js/signup.js"></script>
 </body>
 
 </html>
