--- a/UI/create.html
+++ b/UI/create.html
@@ -37,20 +37,18 @@
                 <li>
                     <div class="thumbnail">
                         <img src="./imgs/userface.png" alt="User thumbnail">
+                        <ul class="user-dropdown">
+                            <li>
+                                <a href="./profile.html">Profile</a>
+                            </li>
+                            <li class="mobile-show">
+                                <a href="./create.html">Add New Entry</a>
+                            </li>
+                            <li>
+                                <a href="./login.html">Log Out</a>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="user-dropdown">
-            <ul>
-                <li>
-                    <a href="./profile.html">Profile</a>
-                </li>
-                <li class="mobile-show">
-                    <a href="./create.html">Add New Entry</a>
-                </li>
-                <li>
-                    <a href="./login.html">Log out</a>
                 </li>
             </ul>
         </div>
@@ -58,7 +56,7 @@
     <main role="main">
         <div class="container col-1">
             <div>
-                <h1 class="big-title">Edit profile</h1>
+                <h1 class="big-title">Add/Edit Entry</h1>
             </div>
             <div class="wrapper editprofile">
                 <form class="form-wrapper">
@@ -74,9 +72,9 @@
                                 <option value="life-style">Life-style</option>
                                 <option value="my love life">My love life</option>
                             </select>
-                            <div class="new-category">
+                            <!-- <div class="new-category">
                                 <a class="modal-open" href="#">Add new category</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="small-spacing"></div>
@@ -92,42 +90,6 @@
             </div>
         </div>
     </main>
-    <div class="modal-olay">
-        <div class="modal-wraP">
-            <form action="./create.html">
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Enter category title">
-                    <div class="color-opt" name="color">
-                        <p>Select color</p>
-                        <span>
-                            <input class="color-control" id="one" type="radio" name="color">
-                            <label class="one" for="one"></label>
-                        </span>
-                        <span>
-                            <input class="color-control" id="two" type="radio" name="color">
-                            <label class="two" for="two"></label>
-                        </span>
-                        <span>
-                            <input class="color-control" id="three" type="radio" name="color">
-                            <label class="three" for="three"></label>
-                        </span>
-                        <span>
-                            <input class="color-control" id="four" type="radio" name="color">
-                            <label class="four" for="four"></label>
-                        </span>
-                        <span>
-                            <input class="color-control" id="five" type="radio" name="color">
-                            <label class="five" for="five"></label>
-                        </span>
-                    </div>
-                </div>
-                <div class="modal-btn-wrap">
-                    <button class="cta-btn">Save</button>
-                </div>
-            </form>
-        </div>
-        <i class="modal-close fas fa-times"></i>
-    </div>
     <script src="./js/custom.js"></script>
 </body>
 
