--- a/UI/details.html
+++ b/UI/details.html
@@ -37,20 +37,18 @@
                 <li>
                     <div class="thumbnail">
                         <img src="./imgs/userface.png" alt="User thumbnail">
+                        <ul class="user-dropdown">
+                            <li>
+                                <a href="./profile.html">Profile</a>
+                            </li>
+                            <li class="mobile-show">
+                                <a href="./create.html">Add New Entry</a>
+                            </li>
+                            <li>
+                                <a href="./login.html">Log Out</a>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="user-dropdown">
-            <ul>
-                <li>
-                    <a href="./profile.html">Profile</a>
-                </li>
-                <li class="mobile-show">
-                    <a href="./create.html">Add New Entry</a>
-                </li>
-                <li>
-                    <a href="./login.html">Log out</a>
                 </li>
             </ul>
         </div>
