--- a/UI/profile.html
+++ b/UI/profile.html
@@ -37,20 +37,18 @@
                 <li>
                     <div class="thumbnail">
                         <img src="./imgs/userface.png" alt="User thumbnail">
+                        <ul class="user-dropdown">
+                            <li>
+                                <a href="./profile.html">Profile</a>
+                            </li>
+                            <li class="mobile-show">
+                                <a href="./create.html">Add New Entry</a>
+                            </li>
+                            <li>
+                                <a href="./login.html">Log Out</a>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="user-dropdown">
-            <ul>
-                <li>
-                    <a href="./profile.html">Profile</a>
-                </li>
-                <li class="mobile-show">
-                    <a href="./create.html">Add New Entry</a>
-                </li>
-                <li>
-                    <a href="./login.html">Log out</a>
                 </li>
             </ul>
         </div>
@@ -106,6 +104,28 @@
                 </div>
             </div>
             <div class="wrapper">
+                <h3>All Categories</h3>
+                <div class="all-categories">
+                    <ul class="">
+                        <l1 class="items">Love Life
+                            <i class="fas fa-times-circle"></i>
+                        </l1>
+                        <l1 class="items">Life style
+                            <i class="fas fa-times-circle"></i>
+                        </l1>
+                        <l1 class="items">Church service
+                            <i class="fas fa-times-circle"></i>
+                        </l1>
+                        <l1 class="items">Romance
+                            <i class="fas fa-times-circle"></i>
+                        </l1>
+                        <a class="add-category modal-open" href="./create.html">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                    </ul>
+                </div>
+            </div>
+            <div class="wrapper">
                 <h3>Reminder Settings</h3>
                 <div class="inner-notsat">
                     <p>
@@ -132,6 +152,42 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="modal-olay">
+            <div class="modal-wraP">
+                <form action="./create.html">
+                    <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Enter category title">
+                        <div class="color-opt" name="color">
+                            <p>Select color</p>
+                            <span>
+                                <input class="color-control" id="one" type="radio" name="color">
+                                <label class="one" for="one"></label>
+                            </span>
+                            <span>
+                                <input class="color-control" id="two" type="radio" name="color">
+                                <label class="two" for="two"></label>
+                            </span>
+                            <span>
+                                <input class="color-control" id="three" type="radio" name="color">
+                                <label class="three" for="three"></label>
+                            </span>
+                            <span>
+                                <input class="color-control" id="four" type="radio" name="color">
+                                <label class="four" for="four"></label>
+                            </span>
+                            <span>
+                                <input class="color-control" id="five" type="radio" name="color">
+                                <label class="five" for="five"></label>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="modal-btn-wrap">
+                        <button class="cta-btn">Save</button>
+                    </div>
+                </form>
+            </div>
+            <i class="modal-close fas fa-times"></i>
         </div>
     </main>
     <script src="./js/custom.js"></script>
