--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
             <a href="./index.html">
                 <img class="auth-logo" src="./imgs/mydiary_logo_white.png" alt="mydiary logo">
             </a>
-            <form class="auth-inner">
+            <form class="auth-inner" id="signup">
                 <div class="auth-title">
                     <h4>Sign Up</h4>
                     <p>or
@@ -58,7 +58,7 @@
             </form>
         </div>
     </div>
-    <script src="./CLIENT/auth.js"></script>
+    <script src="./CLIENT/auth-signup.js"></script>
 </body>
 
 </html>
