had to add get a single category endpoint

--- a/details.html
+++ b/details.html
@@ -71,12 +71,7 @@
                         <span class="color"></span> Life-style</h5>
                     <h6>
                         <i class="fas fa-clock"></i> May 12, 2006</h6>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem accusamus provident ad id culpa nobis
-                        dicta accusantium ipsa magnam facere reiciendis, quos voluptate eligendi numquam.Lorem ipsum dolor
-                        sit amet consectetur adipisicing elit. Quidem accusamus provident ad id culpa nobis dicta accusantium
-                        ipsa magnam facere reiciendis, quos voluptate eligendi numquam.Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Quidem accusamus provident ad id culpa nobis dicta accusantium ipsa magnam facere
-                        reiciendis, quos voluptate eligendi numquam.</p>
+                    <p class="description"></p>
                     <div class="notice">
                         <div class="fav">
                             <i class="fas fa-heart"></i>
@@ -92,7 +87,7 @@
             </div>
         </div>
     </main>
-    <script src="./js/custom.js"></script>
+    <script src="./CLIENT/details.js"></script>
 </body>
 
 </html>
