--- a/editentry.html
+++ b/editentry.html
@@ -56,56 +56,39 @@
     <main role="main">
         <div class="container col-1">
             <div>
-                <h1 class="big-title">Details</h1>
+                <h1 class="big-title">Add/Edit Entry</h1>
             </div>
-            <div class="wrapper details">
-                <div class="diary-entry">
-                    <div class="header">
-                        <h4 class="title"></h4>
-                        <div class="edit">
-                            <i class="fas fa-trash-alt"></i>
-                            <i class="fas fa-pencil-alt"></i>
+            <form id="create" class="wrapper editprofile">
+                <div class="form-wrapper">
+                    <div class="display-payload"></div>
+                    <div class="form-group-wrap">
+                        <div class="form-group">
+                            <div class="title-box">
+                                <input autocomplete="off" class="form-control" type="text" name="title" placeholder="Enter title">
+                                <label></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <select name="category" id="category">
+                            </select>
                         </div>
                     </div>
-                    <h5>
-                        <span class="color"></span>
-                        <span class="category"></span>
-                    </h5>
-                    <h6>
-                        <i class="fas fa-clock"></i>
-                        <span class="createdat"></span>
-                    </h6>
-                    <p class="description"></p>
-                    <div class="notice">
-                        <div class="fav">
-                            <i class="fas fa-heart"></i>
-                        </div>
-                        <div class="timer">Last updated -
-                            <span class="updatedat"></span>
-                        </div>
+                    <div class="small-spacing"></div>
+                    <div class="form-group about-cont">
+                        <textarea class="form-control" name="description" placeholder="Description"></textarea>
+                        <label></label>
                     </div>
                 </div>
-            </div>
-            <div class="back-home">
-                <a href="./dashboard.html">
-                    <i class="fas fa-angle-left"></i>
-                </a>
-            </div>
-        </div>
-        <div class="modal-olay trash-modal">
-            <div class="modal-wrap">
-                <p class="trash-title">Are you sure you want to delete this entry?</p>
-                <div class="trash-body">
-                    <p>This cannot be undone!</p>
-                    <div class="trash-cta">
-                        <button class="accept">YES, DELETE IT</button>
-                        <button class="cancel">CANCEL</button>
-                    </div>
+                <div class="a-right r-btn">
+                    <button class="cta-btn">
+                        <i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+                        Save
+                    </button>
                 </div>
-            </div>
+            </form>
         </div>
     </main>
-    <script src="./CLIENT/details.js"></script>
+    <script src="./CLIENT/create.js"></script>
 </body>
 
 </html>
