feat(listing-entry-page): listing entry page functionality
- verify user token and fetch user's specific entries

[Finishes #159713129]

--- a/create.html
+++ b/create.html
@@ -56,7 +56,7 @@
     <main role="main">
         <div class="container col-1">
             <div>
-                <h1 class="big-title">Add/Edit Entry</h1>
+                <h1 class="big-title">Add New Entry</h1>
             </div>
             <form id="create" class="wrapper editprofile">
                 <div class="form-wrapper">
